<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvCCompany"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bCSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/bSubmit" />

        <TextView
            android:id="@+id/tvCName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvName" />

        <EditText
            android:id="@+id/etCName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tvName"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/tvUrl" />

        <EditText
            android:id="@+id/etCUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tvUrl"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/tvPhone" />

        <EditText
            android:id="@+id/etCPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tvPhone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tvCEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/tvEmail" />

        <EditText
            android:id="@+id/etCEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tvEmail"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCListProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/tvListProduct" />

        <EditText
            android:id="@+id/etCListProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/tvListProduct"
            android:inputType="textMultiLine"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/tvArea" />

        <CheckBox
            android:id="@+id/cbCConsultory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/cbConsultory"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbCCustomDevelopment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/cbCustomDevelopment"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbCSoftwareFactory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/cbSoftwareFactory"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>