<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateDeleteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUDCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvUCompany"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/bUpdate" />

            <Button
                android:id="@+id/bDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/bDelete" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvUDName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvName" />

        <EditText
            android:id="@+id/etUDName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tvName"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvUDUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/tvUrl" />

        <EditText
            android:id="@+id/etUDUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tvUrl"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvUDPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/tvPhone" />

        <EditText
            android:id="@+id/etUDPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tvPhone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tvUDEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/tvEmail" />

        <EditText
            android:id="@+id/etUDEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tvEmail"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvUDListProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/tvListProduct" />

        <EditText
            android:id="@+id/etUDListProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/tvListProduct"
            android:inputType="textMultiLine"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvUDArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/tvArea" />

        <CheckBox
            android:id="@+id/cbUDConsultory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/cbConsultory"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbUDCustomDevelopment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/cbCustomDevelopment"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbUDSoftwareFactory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/cbSoftwareFactory"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>