<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RetrieveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRCompanies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvRCompanies"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bRSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/bSubmit" />

        <TextView
            android:id="@+id/tvRName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvName" />

        <EditText
            android:id="@+id/etRName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tvName"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvRArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/tvArea" />

        <CheckBox
            android:id="@+id/cbRConsultory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/cbConsultory"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbRCustomDevelopment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/cbCustomDevelopment"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbRSoftwareFactory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/cbSoftwareFactory"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/lvRCompanies"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>